Back/db/kubernetes/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 80
  selector:
    io.kompose.service: pgadmin
status:
  loadBalancer: {}
